--- a/src/styles.scss
+++ b/src/styles.scss
@@ -411,6 +411,12 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, p, .p,  span, a{
   .line-heigth-40 {
     line-height: 2.5rem!important;
   }
+  .user-meduim-text-mobile {
+    font-size: 1.25rem!important
+  }
+  .title-padding-mobile {
+    padding: 1.5rem 0!important;
+  }
 }
 
 
